--- a/Edurem/appsettings.json
+++ b/Edurem/appsettings.json
@@ -11,6 +11,6 @@
   },
   "AllowedHosts": "*",
   "FilePaths": {
-    "ConfirmationEmailHtml": "/" 
+    "ConfirmEmail.html": "\\FileSystem\\EmailPatterns\\ConfirmEmail.html"
   }
 }
