--- a/Edurem/Edurem.csproj
+++ b/Edurem/Edurem.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="GitLabApiClient" Version="1.7.0" />
     <PackageReference Include="MailKit" Version="2.10.1" />
     <PackageReference Include="MatBlazor" Version="2.8.0" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.7.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
   </ItemGroup>
