Переделана страница добавления публикации

--- a/Edurem/Edurem.csproj
+++ b/Edurem/Edurem.csproj
@@ -21,10 +21,11 @@
     <PackageReference Include="MatBlazor" Version="2.8.0" />
     <PackageReference Include="Microsoft.Azure.SignalR" Version="1.8.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
     <PackageReference Include="StardustDL.RazorComponents.Markdown" Version="0.0.3.25" />
     <PackageReference Include="WebStoating.Markdig.Prism" Version="1.0.0" />
-    <PackageReference Include="Westwind.AspNetCore.Markdown" Version="3.5.0" />
+    <PackageReference Include="Westwind.AspNetCore.Markdown" Version="3.6.0" />
   </ItemGroup>
 
 </Project>
