--- a/Edurem/Edurem.csproj
+++ b/Edurem/Edurem.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="ColorCode.HTML" Version="2.0.8" />
     <PackageReference Include="CommonMark.NET" Version="0.15.1" />
     <PackageReference Include="Docker.DotNet" Version="3.125.4" />
+    <PackageReference Include="EPPlus" Version="5.6.4" />
     <PackageReference Include="GitLabApiClient" Version="1.7.0" />
     <PackageReference Include="Html2Markdown" Version="4.0.0.427" />
     <PackageReference Include="Jering.Web.SyntaxHighlighters.Prism" Version="4.3.0" />
